# PerfectMagicSquare

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
include/: magic_square.h
src/: magic_square.cpp  main.cpp
tests/: CMakeLists.txt  square_eight_test.cpp  square_eight_visual_test.cpp  square_five_test.cpp  square_five_visual_test.cpp  square_four_test.cpp  square_four_visual_test.cpp  square_nine_test.cpp  square_nine_visual_test.cpp  square_seven_test.cpp  square_seven_visual_test.cpp  square_six_test.cpp  square_six_visual_test.cpp  square_three_test.cpp  square_three_visual_test.cpp  test_helpers.h
